objects/CustomerSurvey__c.object
<CustomObject>
    <description>Customer Survey object stores information about customer surveys that were conducted after case close.</description>
    <fields>
        <fullName>Case_Account_Name__c</fullName>
        <formula>Case__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <formula>TEXT(Case__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Short_Subject__c</fullName>
        <formula>Case__r.Short_Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Short Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_re_open__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you want to re-open this Case?</inlineHelpText>
        <label>Case Re-open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE(
IF(Survey_Score__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Survey_Score__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Survey_Score__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Survey_Score__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Survey_Score__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satisfaction Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Rating__c</fullName>
        <formula>IMAGE(
IF(Resolution_Score__c= 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Resolution_Score__c= 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Resolution_Score__c= 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Resolution_Score__c= 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Resolution_Score__c= 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Did the resolution meet your expectation?</inlineHelpText>
        <label>Resolution Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be check if survey finally submitted via casesurvey page.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Comments__c</fullName>
        <inlineHelpText>How could we have better serviced your case?</inlineHelpText>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How Satisfied are you with the handling of your case?</inlineHelpText>
        <label>Survey Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Survey</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Survey No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Case_Record_Owner_Blank_Validation</fullName>
        <active>true</active>
        <description>Case &amp; Record Owner fields Validation.</description>
        <errorConditionFormula>OR( ISBLANK( Case__c ) , ISBLANK(  Record_Owner__c ))</errorConditionFormula>
        <errorMessage>Case &amp; Record Owner fields are Blank.</errorMessage>
    </validationRules>
</CustomObject>